          removed.

        * OpenSSL is now the only supported cryptography backend for
          systemd-resolved and systemd-importd, and support for gnutls and
          gcrypt has been removed.  Hence, 'gnutls' for 'dns-over-tls=' meson
          option has been deprecated. Also, the 'cryptolib' meson option has
          been deprecated. They will be removed in a future release.

        * systemd-logind's session tracking, which used to be performed via a
          FIFO installed in the client, has been fully switched to be
          pidfd-based. The fd returned by CreateSession() and related calls is
          therefore unused. Moreover, the exit of session leader process will
          immediately cause the session to be stopped.

        * To work around limitations of X11's keyboard handling systemd's
          keyboard mapping hardware database (hwdb.d/60-keyboard.hwdb) so far
          mapped the microphone mute and touchpad on/off/toggle keys to the
          function keys F20, F21, F22, F23 instead of their correct key codes.
          This key code mangling has been removed.
          To maintain compatibility with X11 applications that rely on the old
          function key code mappings, this mangling has now been moved to the
          relevant X11 keyboard driver modules. In order to ensure these keys
          continue to work, update to xf86-input-evdev >= 2.11.0 and
          xf86-input-libinput >= 1.5.0 before updating to systemd >= 258.

        * The D-Bus method org.freedesktop.systemd1.StartAuxiliaryScope() has
          been removed, which was deprecated since v257.

        * systemd-networkd now supports configuring the timeout for IPv4
          Duplicate Address Detection via a new setting
          IPv4DuplicateAddressDetectionTimeoutSec=. The default timeout value
          has been changed from 7 seconds to 200 milliseconds.

        * Support for the !! command line prefix on ExecStart= lines (and