@@ -1606,7 +1606,6 @@ foreach term : ['analyze',
                 'efi',
                 'environment-d',
                 'firstboot',
-                'gshadow',
                 'hibernate',
                 'hostnamed',
                 'hwdb',
@@ -3096,7 +3095,6 @@ foreach tuple : [
         ['ldconfig'],
         ['adm group',              get_option('adm-group')],
         ['wheel group',            get_option('wheel-group')],
-        ['gshadow'],
         ['debug hashmap'],
         ['debug mmap cache'],
         ['debug siphash'],
