@@ -970,7 +970,6 @@ int putgrent_sane(const struct group *gr, FILE *stream) {
         return 0;
 }
 
-#if ENABLE_GSHADOW
 int putsgent_sane(const struct sgrp *sg, FILE *stream) {
         assert(sg);
         assert(stream);
@@ -981,7 +980,6 @@ int putsgent_sane(const struct sgrp *sg, FILE *stream) {
 
         return 0;
 }
-#endif
 
 int fgetpwent_sane(FILE *stream, struct passwd **pw) {
         assert(stream);
@@ -1022,7 +1020,6 @@ int fgetgrent_sane(FILE *stream, struct group **gr) {
         return !!g;
 }
 
-#if ENABLE_GSHADOW
 int fgetsgent_sane(FILE *stream, struct sgrp **sg) {
         assert(stream);
         assert(sg);
@@ -1035,7 +1032,6 @@ int fgetsgent_sane(FILE *stream, struct sgrp **sg) {
         *sg = s;
         return !!s;
 }
-#endif
 
 int is_this_me(const char *username) {
         uid_t uid;
