@@ -2,9 +2,7 @@
 #pragma once
 
 #include <grp.h>
-#if ENABLE_GSHADOW
-#  include <gshadow.h>
-#endif
+#include <gshadow.h>
 #include <pwd.h>
 #include <shadow.h>
 
@@ -121,10 +119,8 @@ int fgetgrent_sane(FILE *stream, struct group **gr);
 int putpwent_sane(const struct passwd *pw, FILE *stream);
 int putspent_sane(const struct spwd *sp, FILE *stream);
 int putgrent_sane(const struct group *gr, FILE *stream);
-#if ENABLE_GSHADOW
 int fgetsgent_sane(FILE *stream, struct sgrp **sg);
 int putsgent_sane(const struct sgrp *sg, FILE *stream);
-#endif
 
 int is_this_me(const char *username);
 
